--- a/themes/hexo-theme-soronvo/layout/page.ejs
+++ b/themes/hexo-theme-soronvo/layout/page.ejs
@@ -18,6 +18,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
   </div>
 </div>
-
+<br>
+<%- include("_other/footer.ejs") %>
 </body>
 </html>
