--- a/themes/hexo-theme-soronvo/layout/_other/head.ejs
+++ b/themes/hexo-theme-soronvo/layout/_other/head.ejs
@@ -6,4 +6,17 @@
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/foundation/5.5.3/js/foundation.min.js"></script>
   <script src="https://cdn.staticfile.org/foundation/5.5.3/js/vendor/modernizr.js"></script>
+  <style>
+  #footer {
+      background-color: #f1f1f1
+  }
+  .sidebar{
+      background-color: #f1f1f1
+  }
+  .tags {
+      background-color: #f1f1f1
+      margin-top: -60px;/*等于footer的高度*/
+      height: 60px;
+  }
+  </style>
 </head>
