add comment and change theme

--- a/themes/hexo-theme-soronvo/layout/_other/head.ejs
+++ b/themes/hexo-theme-soronvo/layout/_other/head.ejs
@@ -18,5 +18,19 @@
       margin-top: -60px;/*等于footer的高度*/
       height: 60px;
   }
+  .mobile-menu {
+    display: none
+  }
+  @media screen and (max-width: 800px) {
+    .aside {
+      display: none
+    }
+    #footer {
+      content: "This is Is A Page For Mobile Phoen"
+    }
+    .mobile-menu {
+      display: inline-block
+    }
+
   </style>
 </head>
