--- a/themes/hexo-theme-soronvo/layout/_other/sidebar.ejs
+++ b/themes/hexo-theme-soronvo/layout/_other/sidebar.ejs
@@ -1,4 +1,4 @@
-<div class="medium-4 columns " style="background-color:#f1f1f1;">
+<div class="medium-4 columns aside" style="background-color:#f1f1f1;">
 
   <ul class="side-nav">
 
