--- a/themes/hexo-theme-soronvo/layout/index.ejs
+++ b/themes/hexo-theme-soronvo/layout/index.ejs
@@ -8,6 +8,7 @@
     <br>
     <center>
       <h1><%- config.title %></h1>
+      <%- include("_other/mobile/mobile-menu.ejs") %>
       <% page.posts.each(function (post) { %>
         <article class="post">
           <div class="post-title">
