--- a/themes/hexo-theme-soronvo/layout/page.ejs
+++ b/themes/hexo-theme-soronvo/layout/page.ejs
@@ -8,7 +8,10 @@
   <div class="medium-8 columns">
 
     <br>
-    <h3><%- page.title %></h3>
+    <center>
+      <h1><%- page.title %></h1>
+      <%- include("_other/mobile/mobile-menu.ejs") %>
+    </center>
     <font color="grey" size=2><%- date(page.date, "YYYY-MM-DD") %></font>
     <title><%- config.title %> - <%- page.title %></title>
     <%- page.content %>
