blog or add theme

--- a/themes/hexo-theme-soronvo/layout/_other/sidebar.ejs
+++ b/themes/hexo-theme-soronvo/layout/_other/sidebar.ejs
@@ -1,4 +1,4 @@
-<div class="medium-4 columns aside" style="background-color:#f1f1f1;">
+<div class="medium-4 columns aside"">
 
   <ul class="side-nav">
 
@@ -37,4 +37,5 @@
     <br>
     (C) 2020 FatManDJ 无备案
   </p>
+  <button id="theme-dark" style="background-color: black">Darkmode</button>
 </div>
